fix: inscription activity spacing (#46)

--- a/frontend/src/app/markets-inscription/markets-inscription.page.scss
+++ b/frontend/src/app/markets-inscription/markets-inscription.page.scss
@@ -96,5 +96,8 @@
 }
 
 .inscription-activity {
-  min-width: 300px;
+  min-width: 250px;
+  width: -webkit-fill-available;
+  width: -moz-available;
+  max-width: 400px;
 }
